<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"

        />

    <item
        android:id="@+id/navigation_browser"
        android:icon="@drawable/ic_browser"
        android:title="@string/title_browser"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_serach" />
    <item
        android:id="@+id/navigation_radio"
        android:icon="@drawable/ic_radio"
        android:title="@string/title_radio" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library"
        android:title="@string/title_library" />



</menu>
